# remind

./: .gitignore  .gitlab-ci.yml  COPYRIGHT  Makefile  NOTE-ABOUT-AI.txt  README  README.md  build.tk  configure  configure.ac  configure.in
april-fools-announcements/: 2026-april-fool-announcement.txt
contrib/: ical2rem.pl
contrib/ical2rem-0.7/: GITHUB
contrib/remind-conf-mode/: remind-conf-mode.el
cremind/: Makefile.PL.in
docs/: README.UNIX  WHATSNEW
examples/: alignment.rem  ansitext  astro  defs.rem  remind.vim  tflag.rem
include/: ansitext.rem  lunar-eclipses.rem  moonphases.rem  seasons.rem  solar-eclipses.rem  sun.rem
include/holidays/: README  ad.rem  ae.rem  al.rem  am.rem  ao.rem  ar.rem  as.rem  at.rem  au.rem  aw.rem  az.rem  ba.rem  bb.rem  bd.rem  be.rem  bf.rem  bg.rem  bh.rem  bi.rem  bn.rem  bo.rem  br.rem  bs.rem  bw.rem  by.rem  bz.rem  ca.rem  cg.rem  ch.rem  chinese-new-year.rem  cl.rem  cm.rem  co.rem  cr.rem  cu.rem  cw.rem  cy.rem  cz.rem  de.rem  (+118 more)
include/holidays/ad/: 02.rem  03.rem  04.rem  05.rem  06.rem  07.rem  08.rem
include/holidays/at/: 1.rem  2.rem  3.rem  4.rem  5.rem  6.rem  7.rem  8.rem  9.rem
include/holidays/au/: act.rem  nsw.rem  nt.rem  qld.rem  sa.rem  tas.rem  vic.rem  wa.rem
include/holidays/ba/: bih.rem  brc.rem  srp.rem
include/holidays/bo/: b.rem  c.rem  h.rem  l.rem  n.rem  o.rem  p.rem  s.rem  t.rem
include/holidays/br/: ac.rem  al.rem  am.rem  ap.rem  ba.rem  ce.rem  df.rem  es.rem  (+18 more)
include/lang/: auto.rem  ca.rem  da.rem  de.rem  en.rem  es.rem  fi.rem  fr.rem  gr.rem  is.rem  it.rem  nl.rem  no.rem  pl.rem  pt.rem  ro.rem
include/translations/: README.txt
include/utils/: add-html-anchors.rem
man/: rem.1.in  rem2ps.1  rem2ps.1.in  remind.1  remind.1.in  tkremind.1  tkremind.1.in
rem2html/: Makefile.in  README.rem2html  rem2html  rem2html.in
rem2pdf/: Makefile.PL.in  Makefile.top.in
resources/: tkremind.desktop
scripts/: tkremind  tkremind.in
src/: Makefile.in  calendar.c  compare-language-mods.pl  config.h.in  custom.h  custom.h.in  dedupe.c  dorem.c  dosubst.c  dynbuf.c  dynbuf.h  err.h  expr.c  expr.h  files.c  funcs.c  globals.c  globals.h  hashtab.c  hashtab.h  hashtab_stats.c  hbcal.c  ifelse.c  init.c  json.c  json.h  lang.h  main.c  md5.c  md5.h  moon.c  omit.c  protos.h  queue.c  rem2ps.c  rem2ps.h  sort.c  token.c  trans.c  trigger.c  (+4 more)
src/langs/: danish.h  dutch.h  english.h  finnish.h  french.h  german.h  icelandic.h  italian.h  norwgian.h  polish.h  portbr.h  romanian.h  spanish.h
tests/: Makefile  ansicolors.rem  blanks.rem  colors.rem  dedupe.rem  expr.rem  if1.rem  if2.rem  json-redirect.rem  manpage-personal-dict  queue1.rem  queue2.rem  ret1.rem  ret2.rem  safety.rem  shade.rem  shaded.rem  soleq.rem  sunmoon.rem  test-addomit.rem  test-all-langs.sh  test-for-backends.rem  test-once.rem  test-pushpop1.rem  test-pushpop2.rem  test-rem  test-timezone-support  test.cmp  test.rem  test2.rem  todos.rem  tstlang.rem  tz.cmp  tz.rem  utf-8.rem  with space.rem  xlat-torture-test.rem  yearfold.rem
tests/purge_dir/: f1.rem  f3.rem
www/: Makefile.in  README  blank.rem  cal_dispatch-DIST  calendar.css  calendar.html-DIST  calpdf  calps  hebdate  hebdate.rem-DIST  hebhtml  hebpdf  hebps  moon  moon.rem-DIST  sunrise  sunrise.rem-DIST  sunset  sunset.rem-DIST
(+347 files in other folders)
